[gd_scene load_steps=2 format=4 uid="uid://combat_ui"]

[ext_resource type="Script" path="res://scripts/combat_ui.gd" id="1_script"]

[node name="CombatUI" type="CanvasLayer"]
script = ExtResource("1_script")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 40.0
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "HP: 100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemyCountLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 50.0
offset_right = 120.0
offset_bottom = 70.0
text = "Enemies: 0"

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 80.0
offset_right = 120.0
offset_bottom = 100.0
text = "Score: 0"

[node name="LevelLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 110.0
offset_right = 120.0
offset_bottom = 130.0
text = "Level: 1"

[node name="StoryLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 140.0
offset_right = 320.0
offset_bottom = 160.0
text = "Story text here"
autowrap_mode = 2

[node name="GenerationStatus" type="Label" parent="."]
offset_left = 20.0
offset_top = 170.0
offset_right = 220.0
offset_bottom = 190.0
text = "AI Status: Ready"

[node name="GameOverPanel" type="Panel" parent="."]
offset_left = 200.0
offset_top = 150.0
offset_right = 600.0
offset_bottom = 350.0
visible = false

[node name="GameOverLabel" type="Label" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER

Final Score: 0

Press R to restart"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DamageNumbers" type="Node2D" parent="."]